cleaned up styling and og stuff

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import { Icon } from 'astro-icon';
       <HeaderLink href="/project">Projects</HeaderLink>
     </nav>
   </div>
-  <div class="space-x-2 flex flex-row">
+  <div>
     <!-- <HeaderLink href="mailto:wkaisertexas@gmail.com">Contact</HeaderLink> -->
     <!-- <HeaderLink href="/feed.rss"><Icon class="w-6 md:w-8" pack="ph" name="rss"/></HeaderLink> -->
     <!-- <HeaderLink href={LINKEDIN} target="_blank"><Icon class="w-6 md:w-8" pack="cib" name="linkedin"/></HeaderLink> -->
