--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,11 +6,11 @@ import { Icon } from 'astro-icon';
 ---
 
 <header class="flex justify-between items-end py-4">
-  <div class="md:flex items-center space-x-2">
-    <h2 class="text-lg font-bold">
+  <div class="md:flex items-center md:space-x-4">
+    <h2 class="text-2xl font-bold tracking-tight">
       <a href="/">{SITE_TITLE}</a>
     </h2>
-    <nav class="text-md space-x-2 pt-1">
+    <nav class="text-xl space-x-6 pt-4 md:pt-1">
       <HeaderLink href="/blog">Blog</HeaderLink>
       <HeaderLink href="/project">Projects</HeaderLink>
     </nav>
