--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -27,7 +27,9 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
     <main class="std-main">
       <Header /> 
      <article class="prose lg:prose-xl">
-        {heroImage && <Image class="object-cover rounded-md shadow-xl" width={16 * 9} aspectRatio={16 / 9} src={heroImage} alt="header image" format="avif" />}
+        {heroImage && <div class="w-full h-min">
+            <Image class="rounded-md shadow-xl object-scale-down" width={16 * 4 * 9 * 2} aspectRatio={16 / 9} src={heroImage} alt="header image" format="avif" />
+          </div>}
         <h1 class="title">{title}</h1>
         <FormattedDate date={pubDate} />
         {
