--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -41,7 +41,7 @@ const projects = (await getCollection("project")).filter(
         <ul class="grid md:grid-cols-2 sm:grid-cols-2 space-y-4">
           {
             projects.map((project) => (
-              <li class="p-2 hover:border-2 mr-4 -ml-2 m-2 border-2 border-black hover:shadow-xl hover:border-emerald-600 rounded-md shadow-md hover:translate-x-1 ">
+              <li class="p-3 hover:border-2 mr-4 -ml-2 m-2 border-2 border-black hover:shadow-xl hover:border-emerald-600 hover:bg-white rounded-md shadow-md hover:translate-x-1 ">
                 <a href={`/project/${project.slug}`}>
                   <div>
                     <header>
@@ -68,8 +68,8 @@ const projects = (await getCollection("project")).filter(
                       </div>
                     </header>
 
-                    <h2 class="font-bold text-md">{project.data.title}</h2>
-                    <p class="text-sm">{project.data.description}</p>
+                    <h2 class="font-bold text-lg">{project.data.title}</h2>
+                    <p class="text-md">{project.data.description}</p>
 
                     <p class="mt-4 mb-2">{project.data.builtWith.join(", ")}</p>
                   </div>
