--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,12 +26,12 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
   <body class="std-body">
     <main class="std-main">
       <Header /> 
-     <article class="prose lg:prose-xl">
-        {heroImage && <div class="w-full h-min">
-            <Image class="rounded-md shadow-xl object-scale-down" width={16 * 4 * 9 * 2} aspectRatio={16 / 9} src={heroImage} alt="header image" format="avif" />
+     <article class="grid prose lg:prose-xl">
+        {heroImage && <div>
+            <Image class="rounded-md shadow-xl object-scale-down" width={128 * 9} aspectRatio={16 / 9} src={heroImage} alt="header image" format="avif" />
           </div>}
         <h1 class="title">{title}</h1>
-        <FormattedDate date={pubDate} />
+        <p>Published on <FormattedDate date={pubDate} /></p>
         {
           updatedDate && (
             <div class="last-updated-on">
@@ -40,7 +40,8 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
           )
         }
         <hr />
-        <slot />
+
+          <slot />
       </article>
 
       <hr class="mt-4" />
