--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
           />
 
           <p>
-            Computer science student insterested in Human-Computer Interfaces
+            Computer science student interested in Human-Computer Interfaces
             and Artifical Inteligence. Enjoy building projects and writing
             informational blogs
           </p>
