--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,7 +32,7 @@ const posts = (await getCollection('blog'))
       <Header />
       <section class="grid md:grid-cols-4">
         <h1 class="text-4xl py-4 font-bold">Blog</h1>
-        <p class="text-lg pb-4 pr-4 row-start-2 col-span-2">A collection of my thoughts and ramblings. More ramblings than I would like to admit.</p>
+        <p class="text-lg pb-4 pr-4 row-start-2 col-span-2">A collection of my thoughts and ramblings</p>
       </section>
 
       <hr class="my-8 mb-16" />
