--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -159,7 +159,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
 
           <p>
             Computer science student interested in Human-Computer Interfaces
-            and Artifical Inteligence. Enjoy building projects and writing
+            and Artificial Intelligence. Enjoy building projects and writing
             informational blogs
           </p>
         </div>
