--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -30,8 +30,8 @@ const projects = (await getCollection("project")).filter(
       <section class="grid md:grid-cols-4">
         <h1 class="text-4xl py-4 font-bold">Projects</h1>
         <p class="text-lg pb-4 pr-4 row-start-2 col-span-2">
-          Building projects in my spare time is a long-standing hobby of mine.
-          Education through project-based learning is my preffered way to learn.
+          Building projects is a long-standing hobby of mine.
+          Education through project-based learning is my prefered way to learn.
         </p>
       </section>
 
