--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -9,12 +9,20 @@ import { EMAIL } from "../consts";
 import "../styles/global.css";
 
 import type { CollectionEntry } from "astro:content";
-import { Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage, next, prev } =
-  Astro.props;
+const images = import.meta.glob('../blog/**/*.{jpeg,jpg,png,svg}');
+
+const getImage = (slug, heroImage) : any => {
+  return images[`../blog/${slug}/${heroImage}`]()
+}
+
+const { data, slug, next, prev } = Astro.props;
+
+const {title, description, pubDate, updatedDate, heroImage } = data
+
 ---
 
 <html lang="en">
@@ -26,12 +34,12 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
   <body class="std-body">
     <main class="std-main">
       <Header /> 
-     <article class="grid prose lg:prose-xl">
+     <article class="grid">
         {heroImage && <div>
-            <Image class="rounded-md shadow-xl object-scale-down" width={128 * 9} aspectRatio={16 / 9} src={heroImage} alt="header image" format="avif" />
+            <Image class="rounded-md shadow-xl object-scale-down" width={128 * 9} src={getImage(slug, heroImage)} alt="header image" format="avif" />
           </div>}
-        <h1 class="title">{title}</h1>
-        <p>Published on <FormattedDate date={pubDate} /></p>
+        <h1 class="title text-6xl font-bold py-4">{title}</h1>
+        <p class="pb-4">Published on <FormattedDate date={pubDate} /></p>
         {
           updatedDate && (
             <div class="last-updated-on">
@@ -40,8 +48,9 @@ const { title, description, pubDate, updatedDate, heroImage, next, prev } =
           )
         }
         <hr />
-
+        <div class="prose lg:prose-lg">
           <slot />
+        </div>
       </article>
 
       <hr class="mt-4" />
