--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import GoogleAnalytics from "../components/GoogleAnalytics.astro";
+import Mathjax from "../components/Mathjax.astro";
 import FooterCTA from "../components/FooterCTA.astro";
 import { EMAIL } from "../consts";
 import "../styles/global.css";
@@ -29,6 +30,7 @@ const {title, description, pubDate, updatedDate, heroImage } = data
   <head>
     <BaseHead title={title} description={description} image={heroImage} />
     <GoogleAnalytics />
+    <Mathjax />
   </head>
 
   <body class="std-body">
