--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -144,10 +144,19 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
     <main class="std-main">
       <Header title={SITE_TITLE} />
 
+      <div id="gridlines" class="fixed inset-0 z-[-1] grid grid-cols-1 lg:grid-cols-5 md:grid-cols-3">
+        <!-- Dashed lines -->
+        <div class="border-r border-dashed"></div>
+        <div class="border-r border-dashed"></div>
+        <div class="border-r border-dashed"></div>
+        <div class="border-r border-dashed"></div>
+        <div><!--blank div takes up space on the side --></div>
+      </div>
+      
       <section
-        class="col-span-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
+        class="col-span-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5"
       >
-        <div class="flex flex-col justify-center py-5">
+        <div class="flex flex-col justify-center py-5 lg:col-span-2">
           <img
             src="handwritten_intro.svg"
             id="intro"
@@ -171,16 +180,22 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
 
         <ul class="space-y-4">
           <ResumeItem
-            title="Valedor Partners"
-            description="Data Science Intern"
-            href="https://valedorpartners.com/"
-            src="/logos/valedor.jpeg"
+            title="University of Virginia, School of Engineering and Applied Science"
+            description="GPU Research Assistant"
+            href="https://engineering.virginia.edu/"
+            src="/logos/uva_engineering.svg"
           />
           <ResumeItem
             title="University of Virginia, School of Data Science"
             description="Research Assistant"
             href="https://datascience.virginia.edu/"
             src="/logos/uva_datascience.svg"
+          />
+          <ResumeItem
+            title="Valedor Partners"
+            description="Data Science Intern"
+            href="https://valedorpartners.com/"
+            src="/logos/valedor.jpeg"
           />
         </ul>
       </section>
