--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -183,7 +183,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
             title="University of Virginia, School of Engineering and Applied Science"
             description="GPU Research Assistant"
             href="https://engineering.virginia.edu/"
-            src="/logos/uva_engineering.svg"
+            src="/logos/uva_engineering.png"
           />
           <ResumeItem
             title="University of Virginia, School of Data Science"
