--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,6 +6,7 @@ import '../styles/global.css';
 export interface Props {
 	title: string;
 	description: string;
+  type?: "website" | "article"; 
 	image?: string;
 }
 
