--- a/src/components/Item.astro
+++ b/src/components/Item.astro
@@ -14,16 +14,16 @@ const { title, description, src, href } = Astro.props;
 <a href={href} class="flex flex-row space-x-6">
   <Image class="h-24 w-24" {src} alt={title} width={256} height={256} format="avif" />
   <div>
-    <h3 class="font-bold text-xl">{title}</h3>
-    <p>{description}</p>
+    <h3 class="font-bold text-xl tracking-tight">{title}</h3>
+    <p class="tracking-wide">{description}</p>
   </div>
 </a>
 :
 <li class="flex flex-row space-x-6">
   <Image src={src} alt={title} width={256} height={256} format="avif" />
   <div>
-    <h3 class="font-bold text-xl">{title}</h3>
-    <p>{description}</p>
+    <h3 class="font-bold text-xl tracking-tight">{title}</h3>
+    <p class="tracking-wide">{description}</p>
   </div>
 </li>
 }
