--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,9 +166,8 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
             height="auto"
           />
 
-          <p>
-            Computer science student interested in Human-Computer Interfaces
-            and Artificial Intelligence. Enjoy building projects and writing
+          <p class="tracking-wide">
+            Computer science student interested in Data Science and Software Development. In my free time, I enjoy building projects and writing
             informational blogs
           </p>
         </div>
@@ -205,7 +204,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
         <ul class="space-y-4">
           <ResumeItem
             title="University of Virginia, School of Engineering and Applied Science"
-            description="Bachelor of Science in Computer Science, Minor in Data Science — 3.9 GPA"
+            description="Bachelor of Science in Computer Science, Minor in Data Science"
             href="https://engineering.virginia.edu/"
             src="/logos/uva.svg"
           />
@@ -273,7 +272,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
                 });
               }
             </script>
-            <p class="text-lg pt-4 pr-4">
+            <p class="text-md pt-4 pr-4 tracking-wide">
               Filter my projects by langauge, library or framework used to build
               them.
             </p>
@@ -328,7 +327,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
           >
         </header>
         <div class="grid md:grid-cols-3">
-          <div class="self-center pr-4 text-lg mb-8">
+          <div class="self-center pr-4 text-md mb-8 tracking-wide">
             I occasionally like to write blog articles. Check them out!
           </div>
           <ul class="md:col-span-2 grid md:grid-cols-2">
@@ -336,8 +335,8 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
               blog.map((post) => (
                 <li class="group p-2 hover:border-2 hover:shadow-md rounded-md mr-4 -ml-2 m-1">
                   <a href={`/blog/${post.slug}`}>
-                    <h3 class="text-lg font-bold">{post.data.title}</h3>
-                    <div class="opacity-80">
+                    <h3 class="text-xl font-bold tracking-tight">{post.data.title}</h3>
+                    <div class="opacity-80 pt-1 tracking-wide">
                       <FormattedDate date={post.data.pubDate} />
                     </div>
                   </a>
