--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -89,7 +89,7 @@ const getImage = (post: any) : any => {
         <FooterCTA
           title="Stay in touch"
           description="Subscribe to my RSS feed to stay updated"
-          href="/feed.rss"
+          href="/feed.xml"
           cta="RSS"
         />
         <FooterCTA
