--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -25,7 +25,7 @@ const { title, description, image = '/social.jpg' } = Astro.props;
 <link rel="canonical" href={canonicalURL} />
 
 <!-- RSS -->
-<link rel="alternative" type="application/rss+xml" title="RSS Feed" href="feed.rss" />
+<link rel="alternative" type="application/rss+xml" title="RSS Feed" href="/feed.xml" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
