--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const today = new Date();
   <p>&copy; {today.getFullYear()} William Kaiser. All rights reserved.</p>
   
   <ul class="flex md:flex-row space-x-4 md:space-x-2">
-    <li><a aria-label="Subscribe to my RSS feed" href="/feed.rss" target="_blank"><Icon class="w-6" pack="ph" name="rss"/></a></li>
+    <li><a aria-label="Subscribe to my RSS feed" href="/feed.xml" target="_blank"><Icon class="w-6" pack="ph" name="rss"/></a></li>
     <li><a aria-label="Send me an email" href={`mailto:${EMAIL}`} target="_blank"><Icon class="w-6" pack="charm" name="mail"/></a></li>
     <li><a aria-label="Personal Instagram" href={INSTAGRAM} target="_blank"><Icon class="w-6" pack="cib" name="instagram"/></a></li>
     <li><a aria-label="Professional LinkedIN" href={LINKEDIN} target="_blank"><Icon class="w-6" pack="cib" name="linkedin"/></a></li>
