added a site name

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,6 +38,7 @@ const { title, description, image = '/social.jpg' } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:site_name" content="William Kaiser's Portfolio & Blog" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
