--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,7 +14,7 @@ import { Image, getImage } from "astro:assets";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const images = import.meta.glob("../blog/**/*.{jpeg,jpg,png,svg}");
+const images = import.meta.glob("../blog/**/*.{jpeg,jpg,png,svg,webp,avif,gif}");
 
 const fetchImg = (slug, heroImage): any => {
   return images[`../blog/${slug}/${heroImage}`]();
@@ -51,7 +51,7 @@ const thumbnail = await getImage({
     {tags && tags.map((tag) => <meta name="article:tag" content={tag} />)}
   </head>
 
-  <body class="flex items-center w-scpen">
+  <body class="flex items-center overflow-x-hidde">
     <main class={`std-main` + (no_hero !== true) ? ` w-screen` : ``}>
       <div class="mx-auto mt-5 max-w-prose p-2">
         <Header />
