--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -9,9 +9,9 @@
   <body class="leading-snug font-serif">
     <header class="grid grid-cols-3">
       <div class="col-span-1 col-start-2 flex flex-col text-center">
-        <h1 class="text-2xl font-bold">William David Kaiser</h1>
-        <a href="mailto:wkaisertexas@gmail.com" class="font-bold"
-          >wkaisertexas@gmail.com</a
+        <h1 class="text-xl font-bold">William David Kaiser</h1>
+        <a href="mailto:williamdkaiser@outlook.com" class="font-bold"
+          >williamdkaiser@outlook.com</a
         >
         <a href="tel:832-925-6037">(832) 925-6037</a>
       </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="text-right">
               <div>GPA 3.9</div>
-              <div>2026</div>
+              <div class="italic">May 2026</div>
             </div>
           </div>
           <ul class="list-inside list-disc px-4 pr-24">
@@ -190,15 +190,15 @@
         <div id="isef-analysis">
           <div class="flex flex-row justify-between items-end">
             <div>
-              <h3 class="text-lg">
+              <h3>
                 <strong
-                  >International Science and Engineeering Fair Analysis</strong
+                  >International Science and Engineering Fair Analysis</strong
                 >
               </h3>
               <p class="italic">Data Visualization Project</p>
             </div>
             <div>
-              <p class="italic">Feburary 2023 &mdash; May 2023</p>
+              <p class="italic">February 2023 &mdash; May 2023</p>
             </div>
           </div>
 
@@ -255,7 +255,7 @@
         <h2 class="text-2xl font-semibold -mb-1">Skills</h2>
         <hr class="border-black border-t-[3px]" />
 
-        <ul class="px-4 py-2">
+        <ul class="px-4 pt-2">
           <li>
             <strong>Languages:</strong> Python, C++, Java, Swift, HTML, CSS, JavaScript,
             R, SQL
