--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -87,7 +87,7 @@
             </li>
             <li>
               Paid National Science Foundation position with Professor of
-              Computer Science Jog Adwait.
+              Computer Science Adwait Jog.
             </li>
           </ul>
         </div>
